projects/vb6parse/snapshots/parsers/cst/control_flow/if/nested_if_elseif_else.snap
---
source: projects/vb6parse/tests/control_flow/if_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: x
                    - kind: Whitespace
                      text: " "
                    - kind: GreaterThanOperator
                      text: ">"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: y
                            - kind: Whitespace
                              text: " "
                            - kind: GreaterThanOperator
                              text: ">"
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "0"
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children:
                            - kind: Whitespace
                              text: "        "
                        - kind: ElseIfClause
                          children:
                            - kind: ElseIfKeyword
                              text: ElseIf
                            - kind: Whitespace
                              text: " "
                            - kind: BinaryExpression
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: y
                                - kind: Whitespace
                                  text: " "
                                - kind: LessThanOperator
                                  text: "<"
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "0"
                            - kind: Whitespace
                              text: " "
                            - kind: ThenKeyword
                              text: Then
                            - kind: Newline
                              text: "\n"
                            - kind: StatementList
                              children:
                                - kind: Whitespace
                                  text: "        "
                        - kind: ElseClause
                          children:
                            - kind: ElseKeyword
                              text: Else
                            - kind: Newline
                              text: "\n"
                            - kind: StatementList
                              children:
                                - kind: Whitespace
                                  text: "        "
                        - kind: EndKeyword
                          text: End
                        - kind: Whitespace
                          text: " "
                        - kind: IfKeyword
                          text: If
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: ElseIfClause
                  children:
                    - kind: ElseIfKeyword
                      text: ElseIf
                    - kind: Whitespace
                      text: " "
                    - kind: BinaryExpression
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: x
                        - kind: Whitespace
                          text: " "
                        - kind: LessThanOperator
                          text: "<"
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "0"
                    - kind: Whitespace
                      text: " "
                    - kind: ThenKeyword
                      text: Then
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "    "
                - kind: ElseClause
                  children:
                    - kind: ElseKeyword
                      text: Else
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
